My second commit

--- a/Hi.html
+++ b/Hi.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Mate academy</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <span>
+    <h1>Nested Lists</h1>
+    <h2>Ordered list inside unordered</h2>
+    <!-- Insert unordered list with nested ordered lists -->
+    <ul>
+      <li> 3 largest countries by population
+        <ol>
+        <li>China</li>
+        <li>India</li>
+        <li>United States</li>
+        </ol></li>
 
-
-
-<title>Hiolllo</title>
-<script src="example.js"> </script>
-</head>
-<body>
-<h1> Привет </h1>
-</body>
+      <li> 3 largest cities by population
+        <ol>
+        <li>Tokyo</li>
+        <li>Delhi</li>
+        <li>Shanghai</li>
+        </ol></li>
+      
+    </ul>
+  </span>
+  </body>
 </html>
