--- a/Hi.html
+++ b/Hi.html
@@ -1,38 +1,185 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Mate academy</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <span>
-    <h1>Nested Lists</h1>
-    <h2>Ordered list inside unordered</h2>
-    <!-- Insert unordered list with nested ordered lists -->
-    <div class="container">
-    <ul>
-      <li> 3 largest countries by population
-        <ol>
-        <li class="phrase-1">China</li>
-        <li class="phrase-1">India</li>
-        <li>United States</li>
-        </ol></li>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Most paid athletes</title>
+  <link rel="stylesheet" href="styles/main.css">
+  <script src="./styles/main.js"></script>
+</head>
+<body>
+<main class="people">
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Mayweather.jpg"
+        alt="Floyd Mayweather"
+      >
+      <span class="rank">1</span>
+    </section>
+    <section class="details">
+      <a class="name">Floyd Mayweather</a>
+      <section class="extra">
+        <span class="sport">Boxing</span>
+        <span class="pay">285</span>
+      </section>
+    </section>
+  </article>
 
-      <li> 3 largest cities by population
-        <ol>
-        <li>Tokyo</li>
-        <li>Delhi</li>
-        <li>Shanghai</li>
-        </ol></li>
-      
-    </ul>
-  </span>
-</div>
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Messi.jpg"
+        alt="Lionel Messi"
+      >
+      <span class="rank">2</span>
+    </section>
+    <section class="details">
+      <a class="name">Lionel Messi</a>
+      <section class="extra">
+        <span class="sport">Soccer</span>
+        <span class="pay">111</span>
+      </section>
+    </section>
+  </article>
 
-<div class="block-container">DIV CONTENT</div>
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ronaldo.jpg"
+        alt="Cristiano Ronaldo"
+      >
+      <span class="rank">3</span>
+    </section>
+    <section class="details">
+      <a class="name">Cristiano Ronaldo</a>
+      <section class="extra">
+        <span class="sport">Soccer</span>
+        <span class="pay">108</span>
+      </section>
+    </section>
+  </article>
 
-<span class="inline-container">SPAN Content</span>
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/McGregor.jpg"
+        alt="Conor McGregor"
+      >
+      <span class="rank">4</span>
+    </section>
+    <section class="details">
+      <a class="name">Conor McGregor</a>
+      <section class="extra">
+        <span class="sport">Mixed Martial Arts</span>
+        <span class="pay">99</span>
+      </section>
+    </section>
+  </article>
 
-  </body>
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Neymar.jpg"
+        alt="Neymar"
+      >
+      <span class="rank">5</span>
+    </section>
+    <section class="details">
+      <a class="name">Neymar</a>
+      <section class="extra">
+        <span class="sport">Soccer</span>
+        <span class="pay">90</span>
+      </section>
+    </section>
+  </article>
+
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/James.jpg"
+        alt="LeBron James"
+      >
+      <span class="rank">6</span>
+    </section>
+    <section class="details">
+      <a class="name">LeBron James</a>
+      <section class="extra">
+        <span class="sport">Basketball</span>
+        <span class="pay">85.5</span>
+      </section>
+    </section>
+  </article>
+
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Federer.jpg"
+        alt="Roger Federer"
+      >
+      <span class="rank">7</span>
+    </section>
+    <section class="details">
+      <a class="name">Roger Federer</a>
+      <section class="extra">
+        <span class="sport">Tennis</span>
+        <span class="pay">77.2</span>
+      </section>
+    </section>
+  </article>
+
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Curry.jpg"
+        alt="Stephen Curry"
+      >
+      <span class="rank">8</span>
+    </section>
+    <section class="details">
+      <a class="name">Stephen Curry</a>
+      <section class="extra">
+        <span class="sport">Basketball</span>
+        <span class="pay">76.9</span>
+      </section>
+    </section>
+  </article>
+
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ryan.jpg"
+        alt="Matt Ryan"
+      >
+      <span class="rank">9</span>
+    </section>
+    <section class="details">
+      <a class="name">Matt Ryan</a>
+      <section class="extra">
+        <span class="sport">Football</span>
+        <span class="pay">67.3</span>
+      </section>
+    </section>
+  </article>
+
+  <article class="person">
+    <section class="photo">
+      <img
+        src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Stafford.jpg"
+        alt="Matthew Stafford"
+      >
+      <span class="rank">10</span>
+    </section>
+    <section class="details">
+      <a class="name">Matthew Stafford</a>
+      <section class="extra">
+        <span class="sport">Football</span>
+        <span class="pay">59.5</span>
+      </section>
+    </section>
+  </article>
+</main>
+</body>
 </html>
