--- a/Hi.html
+++ b/Hi.html
@@ -2,181 +2,190 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
+  <meta athlete__name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Most paid athletes</title>
   <link rel="stylesheet" href="styles/main.css">
-  <script src="./styles/main.js"></script>
 </head>
 <body>
 <main class="people">
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Mayweather.jpg"
         alt="Floyd Mayweather"
       >
-      <span class="rank">1</span>
+      <span class="athlete__rank">1</span>
     </section>
-    <section class="details">
-      <a class="name">Floyd Mayweather</a>
-      <section class="extra">
-        <span class="sport">Boxing</span>
-        <span class="pay">285</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Floyd Mayweather</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Boxing</span>
+        <span class="athlete__pay">285</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Messi.jpg"
         alt="Lionel Messi"
       >
-      <span class="rank">2</span>
+      <span class="athlete__rank">2</span>
     </section>
-    <section class="details">
-      <a class="name">Lionel Messi</a>
-      <section class="extra">
-        <span class="sport">Soccer</span>
-        <span class="pay">111</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Lionel Messi</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Soccer</span>
+        <span class="athlete__pay">111</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ronaldo.jpg"
         alt="Cristiano Ronaldo"
       >
-      <span class="rank">3</span>
+      <span class="athlete__rank">3</span>
     </section>
-    <section class="details">
-      <a class="name">Cristiano Ronaldo</a>
-      <section class="extra">
-        <span class="sport">Soccer</span>
-        <span class="pay">108</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Cristiano Ronaldo</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Soccer</span>
+        <span class="athlete__pay">108</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/McGregor.jpg"
         alt="Conor McGregor"
       >
-      <span class="rank">4</span>
+      <span class="athlete__rank">4</span>
     </section>
-    <section class="details">
-      <a class="name">Conor McGregor</a>
-      <section class="extra">
-        <span class="sport">Mixed Martial Arts</span>
-        <span class="pay">99</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Conor McGregor</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Mixed Martial Arts</span>
+        <span class="athlete__pay">99</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Neymar.jpg"
         alt="Neymar"
       >
-      <span class="rank">5</span>
+      <span class="athlete__rank">5</span>
     </section>
-    <section class="details">
-      <a class="name">Neymar</a>
-      <section class="extra">
-        <span class="sport">Soccer</span>
-        <span class="pay">90</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Neymar</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Soccer</span>
+        <span class="athlete__pay">90</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/James.jpg"
         alt="LeBron James"
       >
-      <span class="rank">6</span>
+      <span class="athlete__rank">6</span>
     </section>
-    <section class="details">
-      <a class="name">LeBron James</a>
-      <section class="extra">
-        <span class="sport">Basketball</span>
-        <span class="pay">85.5</span>
+    <section class="athlete__details">
+      <a class="athlete__name">LeBron James</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Basketball</span>
+        <span class="athlete__pay">85.5</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Federer.jpg"
         alt="Roger Federer"
       >
-      <span class="rank">7</span>
+      <span class="athlete__rank">7</span>
     </section>
-    <section class="details">
-      <a class="name">Roger Federer</a>
-      <section class="extra">
-        <span class="sport">Tennis</span>
-        <span class="pay">77.2</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Roger Federer</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Tennis</span>
+        <span class="athlete__pay">77.2</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Curry.jpg"
         alt="Stephen Curry"
       >
-      <span class="rank">8</span>
+      <span class="athlete__rank">8</span>
     </section>
-    <section class="details">
-      <a class="name">Stephen Curry</a>
-      <section class="extra">
-        <span class="sport">Basketball</span>
-        <span class="pay">76.9</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Stephen Curry</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Basketball</span>
+        <span class="athlete__pay">76.9</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ryan.jpg"
         alt="Matt Ryan"
       >
-      <span class="rank">9</span>
+      <span class="athlete__rank">9</span>
     </section>
-    <section class="details">
-      <a class="name">Matt Ryan</a>
-      <section class="extra">
-        <span class="sport">Football</span>
-        <span class="pay">67.3</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Matt Ryan</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Football</span>
+        <span class="athlete__pay">67.3</span>
       </section>
     </section>
   </article>
 
-  <article class="person">
-    <section class="photo">
+  <article class="athlete people__athlete">
+    <section class="athlete__photo">
       <img
+        class="athlete__avatar"
         src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Stafford.jpg"
         alt="Matthew Stafford"
       >
-      <span class="rank">10</span>
+      <span class="athlete__rank">10</span>
     </section>
-    <section class="details">
-      <a class="name">Matthew Stafford</a>
-      <section class="extra">
-        <span class="sport">Football</span>
-        <span class="pay">59.5</span>
+    <section class="athlete__details">
+      <a class="athlete__name">Matthew Stafford</a>
+      <section class="athlete__extra">
+        <span class="athlete__sport">Football</span>
+        <span class="athlete__pay">59.5</span>
       </section>
     </section>
   </article>
